gcc/testsuite/g++.dg/cpp0x/udlit-tmpl-arg-neg.C
// { dg-options -std=c++0x }

template<char...>
  int operator"" _xyz(unsigned long long);	// { dg-error "has invalid argument list" }
